--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+    Dưới đây là thẻ Google cho tài khoản này. Hãy sao chép và dán thẻ này vào mã của mỗi trang trên trang web của bạn, ngay sau thành phần <head>. Không thêm quá 1 thẻ Google vào mỗi trang.
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GD8DNCVXWC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GD8DNCVXWC');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CryptoRisk | XYZ Assessment</title>
@@ -122,5 +133,6 @@
     <script src="data.js"></script>
     <script src="app.js"></script>
 </body>
+
 
 </html>
